--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,6 @@ on:
     branches:
       - 'main'
 
-permissions:
-  contents: read
-
 jobs:
   build:
 
@@ -27,11 +24,9 @@ jobs:
       with:
         java-version: '17'
         distribution: 'adopt'
-        
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-      with:
-        arguments: build
 
     - name: Run chmod to make gradlew executable
       run: chmod +x ./gradlew
+
+    - name: Build with Gradle
+      run: ./gradlew clean build -x test
